--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -6,7 +6,8 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion></ProductVersion>
+    <ProductVersion>
+    </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{666308FF-9D44-4422-A902-20DF74CD9BA7}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -21,7 +22,8 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
-    <NuGetPackageImportStamp></NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -237,6 +239,8 @@
     <Compile Include="Controllers\V2\SentInboxController.cs" />
     <Compile Include="Controllers\V2\UserInfoController.cs" />
     <Compile Include="Controllers\V2\UsersController.cs" />
+    <Compile Include="InMemory\Private\ReportInMemory.cs" />
+    <Compile Include="InMemory\Public\IReportInMemory.cs" />
     <Compile Include="InquiryProcessing\Private\AchievementInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\AnswerInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\AppAdvertsInquiryProcessor.cs" />
@@ -427,7 +431,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\Api.Chimishod.ir.pubxml" />
     <None Include="Properties\PublishProfiles\ApiAsp.pubxml" />
     <None Include="Properties\PublishProfiles\development.pubxml" />
@@ -440,12 +446,14 @@
     </None>
     <None Include="Web.NovinDevDeploy.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Web.NovinDevTest.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.NovinLiveDeploy.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Web.NovinLiveTest.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -551,7 +559,8 @@
           <IISUrl>http://localhost:7895/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl></CustomServerUrl>
+          <CustomServerUrl>
+          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
