--- a/Source/Falcon/src/Falcon.Web.Api/Web.Debug.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.Debug.config
@@ -14,7 +14,7 @@
   <connectionStrings>
     
     <add name="DbEntity"
-      connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishod;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"
+      connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishodLive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
 
     <add name="HangFire"
