--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -59,8 +59,8 @@
   
   <connectionStrings>
 
-    <add name="DbEntity" connectionString="" />
-    <add name="HangFire" connectionString="" />
+    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishodLive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HangFire" connectionString="Data Source=.;Initial Catalog=SocialHangfire;Integrated Security=True" />
     
     <!--Online Tegra VPS Connection-->
     
