Finish Up Telegram Integration Phase 1.0

--- a/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
+++ b/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
@@ -114,6 +114,7 @@
     <Compile Include="RandomGeneratorAdapter.cs" />
     <Compile Include="Security\IUserSession.cs" />
     <Compile Include="Security\IWebUserSession.cs" />
+    <Compile Include="Utils\Utils.cs" />
     <Compile Include="UUIDGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
