Refactor Telegram Service To Be Reusable in controllers

--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -240,6 +240,7 @@
     <Compile Include="Controllers\V2\QuestsController.cs" />
     <Compile Include="Controllers\V2\ReportController.cs" />
     <Compile Include="Controllers\V2\SentInboxController.cs" />
+    <Compile Include="Controllers\V2\TelegramController.cs" />
     <Compile Include="Controllers\V2\UserInfoController.cs" />
     <Compile Include="Controllers\V2\UsersController.cs" />
     <Compile Include="InMemory\Private\ReportInMemory.cs" />
