--- a/Source/Falcon/src/Falcon.Development.Console/Falcon.Development.Console.csproj
+++ b/Source/Falcon/src/Falcon.Development.Console/Falcon.Development.Console.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Telegram.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
