--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Api\Friend\SFriendCharacterDetailInquiry.cs" />
     <Compile Include="Api\Friend\SQuestionWithAnswerState.cs" />
     <Compile Include="Api\Friend\SUserNameAndImagePath.cs" />
+    <Compile Include="Api\Initialize\SInitializeInquiry.cs" />
     <Compile Include="Api\Input\Questions\EditInfo.cs" />
     <Compile Include="Api\Input\Questions\RemoveInfo.cs" />
     <Compile Include="Api\Level\SLevelUpInfo.cs" />
