Raw Implementation of all new requests

--- a/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
+++ b/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
@@ -108,6 +108,7 @@
     <Compile Include="QueryProcessors\IQuestionReportQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IQuestionSelectorQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IQuestionsQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IQuestQuestionsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IQuestSnapshotQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IQuestsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IScoringQueryProcessor.cs" />
