--- a/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
+++ b/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Extentions\ContextExtensions.cs" />
     <Compile Include="Extentions\DateTimeExtentions.cs" />
     <Compile Include="Extentions\IntExtensions.cs" />
+    <Compile Include="Extentions\StringExtensions.cs" />
     <Compile Include="Extentions\UriExtensions.cs" />
     <Compile Include="IDateTime.cs" />
     <Compile Include="IRandomGenerator.cs" />
