--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Api\Quest\SFriendQuestDetail.cs" />
     <Compile Include="Api\Quest\SQuest.cs" />
     <Compile Include="Api\Quest\SQuestAnswer.cs" />
+    <Compile Include="Api\Quest\SFinaleQuest.cs" />
     <Compile Include="Api\Quest\SQuestDetail.cs" />
     <Compile Include="Api\Quest\SQuestInquiry.cs" />
     <Compile Include="Api\Quest\SQuestScoreSnapshot.cs" />
