--- a/Source/Falcon/src/Falcon.Web.Api/Web.NovinDevDeploy.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.NovinDevDeploy.config
@@ -14,9 +14,9 @@
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>  
 
-  <system.web>
+  <!--<system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
-  </system.web>
+  </system.web>-->
   
   
 </configuration>
