Fixing Quest Question Order by

--- a/Source/Falcon/src/Falcon.Web.Api/Web.Debug.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.Debug.config
@@ -37,4 +37,12 @@
     -->
   </system.web>
 
+  <log4net>
+    <appender>
+      <file type="log4net.Util.PatternString" value="..\\..\\logs\\Falcon.Web.Api-Debug.log" 
+        xdt:Transform="SetAttributes" xdt:Locator="Match(type)"/>
+       
+    </appender>
+  </log4net>
+
 </configuration>
