--- a/Source/Falcon/src/Falcon.Web.Api/Web.NovinLiveDeploy.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.NovinLiveDeploy.config
@@ -17,4 +17,14 @@
     <compilation xdt:Transform="RemoveAttributes(debug)" />
   </system.web>
   
+  
+  <log4net>
+    <appender>
+      <file type="log4net.Util.PatternString" value="..\\..\\logs\\Falcon.Web.Api-Live.log"
+        xdt:Transform="SetAttributes" xdt:Locator="Match(type)"/>
+
+    </appender>
+  </log4net>
+  
+  
 </configuration>
