--- a/Source/Falcon/src/Falcon.Web.Api/Web.NovinQADeploy.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.NovinQADeploy.config
@@ -19,4 +19,12 @@
   </system.web>
   
   
+  <log4net>
+    <appender>
+      <file type="log4net.Util.PatternString" value="..\\..\\logs\\Falcon.Web.Api-QA.log" 
+        xdt:Transform="SetAttributes" xdt:Locator="Match(type)"/>
+       
+    </appender>
+  </log4net>
+  
 </configuration>
