--- a/Source/Falcon/src/Falcon.Web.Api/Web.Release.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.Release.config
@@ -42,4 +42,13 @@
       </customErrors>
     -->
   </system.web>
+
+  <log4net>
+    <appender>
+      <file type="log4net.Util.PatternString" value="..\\..\\logs\\Falcon.Web.Api-Release.log"
+        xdt:Transform="SetAttributes" xdt:Locator="Match(type)"/>
+
+    </appender>
+  </log4net>
+  
 </configuration>
