--- a/Source/Falcon/src/Falcon.Web.Api/Web.NovinDevDeploy.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.NovinDevDeploy.config
@@ -17,6 +17,14 @@
   <!--<system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
   </system.web>-->
+
+
+  <log4net>
+    <appender>
+      <file type="log4net.Util.PatternString" value="..\\..\\logs\\Falcon.Web.Api-Dev.log"
+        xdt:Transform="SetAttributes" xdt:Locator="Match(type)"/>
+    </appender>
+  </log4net>
   
   
 </configuration>
