--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -59,9 +59,12 @@
   
   <connectionStrings>
 
-    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=87.107.135.252,4542;Initial Catalog=SocialChimishodDev;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="HangFire" connectionString="Data Source=87.107.135.252,4542;Initial Catalog=SocialHangfireDev;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true" />
+    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishodDev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="HangFire" connectionString="Data Source=.;Initial Catalog=SocialHangfireDev;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true" />-->
+    <add name="HangFire" connectionString="Data Source=.;Initial Catalog=SocialHangfire;Integrated Security=True" />
     
+
+
     <!--Online Tegra VPS Connection-->
     
     <!--<add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=148.251.102.212,4542;Initial Catalog=SocialChimishod;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
